Changed profile page to represent Hulk

--- a/01/ProfileApp/templates/index.html
+++ b/01/ProfileApp/templates/index.html
@@ -16,24 +16,24 @@
         <div class="row m-3 p-5">
 
             <div class="col-md">
-                <h1>Wow Iron Man</h1>
-                <p>Identity: Tony Stark</p>
+                <h1>Hulk</h1>
+                <p>Identity: Bruce Banner</p>
                 <h2>Superpowers</h2>
-                <p>Billionaire Entrepreneur</p>
-                <p>Arms Dealer</p>
-                <p>High Tech Armor</p>
+                <p>Super Strength</p>
+                <p>Transformation</p>
                 <h2>Weakness</h2>
-                <p>Arrogance</p>
-                <p>Doesn't listen to others</p>
+                <p>Anger activates power</p>
+                <p>Can sometimes lose control</p>
+                <p>Transformation causes split personality</p>
                 <h2>Contacts</h2>
-                <p>Twitter: ironman@stark.com</p>
-                <p>Instagram: ironman</p>
-                <p>Facebook: Tony Stark</p>
-                <p>Email: ironman@stark.com</p>
+                <p>Twitter: @BigGreen</p>
+                <p>Instagram: TheBigGreen</p>
+                <p>Facebook: Bruce Banner</p>
+                <p>Email: brucebanner@angry.com</p>
             </div>
 
             <div class="col-md">
-                <img src="/static/images/iron_man.jpg" alt="Iron Man" width="500">
+                <img src="/static/images/hulk.jpg" alt="hulk" width="500">
             </div>
 
         </div>
