--- a/02/ProfileApp/templates/index.html
+++ b/02/ProfileApp/templates/index.html
@@ -16,7 +16,7 @@
         <div class="row m-3 p-5">
 
             <div class="col-md">
-                <h1>About Mee</h1>
+                <h1>About Me</h1>
                 <p>I am Maxwell Seybert</p>
                 <ul>
                     <li>Applied Mathematics Major at UNC</li>
