--- a/SuperHero/hero/templates/hero.html
+++ b/SuperHero/hero/templates/hero.html
@@ -1,3 +1,24 @@
-<h1>{{ title }}</h1>
-<p>{{ id }}</p>
-<img src="{{ image }}" alt="{{ image }}" width="300">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+    <div class="container-fluid bg-primary" style="padding: 7px;">
+        <h1>{{ title }}</h1>
+    </div>
+    <div class="container-fluid" style="padding: 5px;">
+        <h3>Real Name - {{ id }}</p>
+    </div>
+
+    <img src="{{ image }}" alt="{{ image }}" width="300">
+</body>
+
+</html>
