--- a/SuperHero/hero/templates/heroes.html
+++ b/SuperHero/hero/templates/heroes.html
@@ -1,6 +1,29 @@
-<h1>My Superhero Page</h1>
-<ul>
-    <li><a href="hulk">Hulk</a></li>
-    <li><a href="blackwidow">Black Widow</a></li>
-    <li><a href="ironman">Iron Man</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Superhero HomePage</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+    <div class="container-fluid bg-primary" style="padding: 7px;">
+        <h1>My Superhero Page</h1>
+    </div>
+    <div class="container-fluid" style="margin: 5px;">
+        <h2>Superhero List</h2>
+
+    </div>
+    <ul class="list-group">
+        <li class="list-group-item"><a href="hulk">Hulk</a></li>
+        <li class="list-group-item"><a href="blackwidow">Black Widow</a></li>
+        <li class="list-group-item"><a href="ironman">Iron Man</a></li>
+        <li class="list-group-item"><a href="spiderman">SpiderMan</a></li>
+    </ul>
+</body>
+
+</html>
