--- a/Project6/Superhero/hero/templates/hero/detail.html
+++ b/Project6/Superhero/hero/templates/hero/detail.html
@@ -40,7 +40,7 @@ Hero Details
                     <td>{{object.description}}</td>
                 </tr>
                 <tr>
-                    <img src="/static/images/{{object.image}}" alt="">
+                    <img src="/static/images/{{object.image}}" alt="" width="200">
                 </tr>
             </table>
 
