--- a/Superhero/hero/templates/theme.html
+++ b/Superhero/hero/templates/theme.html
@@ -15,16 +15,33 @@
 
     <header class="bg-primary p-5 mb-5">
         <div class="row">
-            <div class="col-11">
+            <div class="col-9">
                 <h1>Hero Database</h1>
             </div>
-            <div class="col">
-                <a href="./" class="btn btn-dark">Home</a>
+            {% if user.is_authenticated %}
+            <div class='col'>
+                <a href="/accounts/logout" class="btn btn-dark">Sign Out</a>
             </div>
+            {% else %}
+            <div class='col'>
+                <a href="/accounts/login" class="btn btn-dark">Log In</a>
+            </div>
+            <div class='col'>
+                <a href="/accounts/signup" class="btn btn-dark">Sign Up</a>
+            </div>
+            {% endif%}
         </div>
+        {% if user.is_authenticated %}
+        <div class="row">
+            <h2>Hello, {{user.username}}</h2>
+        </div>
+
+
+        {%else%}
         <div class="row">
             <h2>Data Views Application</h2>
         </div>
+        {%endif%}
 
     </header>
 
