--- a/Superhero/hero/templates/theme.html
+++ b/Superhero/hero/templates/theme.html
@@ -30,6 +30,12 @@
                 <a href="/accounts/signup" class="btn btn-dark">Sign Up</a>
             </div>
             {% endif%}
+            <div class='col'>
+                <a href="/article" class="btn btn-dark"> Articles</a>
+            </div>
+            <div class='col'>
+                <a href="/hero" class="btn btn-dark"> Heros</a>
+            </div>
         </div>
         {% if user.is_authenticated %}
         <div class="row">
