--- a/Superhero/hero/templates/hero/detail.html
+++ b/Superhero/hero/templates/hero/detail.html
@@ -45,8 +45,8 @@ Hero Details
             </table>
 
             <p>
-                <a href="/add" class="btn btn-success m-5">Add New Hero</a>
-                <a href="/{{ object.pk }}/" class="btn btn-success m-5">Edit Hero</a>
+                <a href="add" class="btn btn-success m-5">Add New Hero</a>
+                <a href="{{ object.pk }}/" class="btn btn-success m-5">Edit Hero</a>
                 <a class="btn btn-success m-5" href="{{object.pk}}/delete">Delete Hero</a>
             </p>
         </div>
