--- a/Superhero/hero/templates/article/detail.html
+++ b/Superhero/hero/templates/article/detail.html
@@ -1,6 +1,8 @@
 {% extends 'theme.html' %}
 
-
+{% block title %}
+{{object.title}}
+{% endblock title %}
 {% block content %}
 
 <div class="container m-5">
@@ -8,35 +10,19 @@
     <h1 class="text-primary">Article Details</h1>
 
     <div class="container">
-        <div class="row">
 
-            <div class="col-lg">
-
-                <table class="table">
-                    <tr>
-                        <td>Title</td>
-                        <td>{{ object.title }}</td>
-                    </tr>
-                    <tr>
-                        <td>Author</td>
-                        <td>
-                            <b><a href="/author/{{ object.author.pk }}">{{ object.author.user.username }}</a></b>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Description</td>
-                        <td><b>{{ object.body }}</b></td>
-                    </tr>
-                </table>
+        <div class="card">
+            <div class="card-body">
+                <p class="card-body">
+                    {{object.body}}
+                </p>
+                <a href="/article/" class="card-link">Article List</a>
+                <a href="/article/{{ object.pk }}/" class="card-link">Edit Article</a>
+                <a href="/article/{{ object.pk }}/delete" class="card-link">Delete Article</a>
 
             </div>
-
         </div>
     </div>
-
-    <a href="/article/" class="btn btn-success m-5">Article List</a>
-    <a href="/article/{{ object.pk }}/" class="btn btn-success m-5">Edit Article</a>
-    <a href="/article/{{ object.pk }}/delete" class="btn btn-success m-5">Delete Article</a>
 </div>
 
 {% endblock content %}
