--- a/Superhero/hero/templates/hero/list.html
+++ b/Superhero/hero/templates/hero/list.html
@@ -9,30 +9,80 @@ List of Heroes
 {% block content %}
 
 <div class="row">
+    <div class="container mt-5">
+        <div class="row">
 
-    <div class="card col-lg">
+            <div class="col-sm">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item-active">
+                            <img src="/static/images/hulk.jpg" alt="generic_hero" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/images/black_widow.jpg" alt="black_widow" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/images/captain_america.jpg" alt="captain_america" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/images/iron_man.jpg" alt="iron_man" class="d-block w-100">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/static/images/spiderman.jpg" alt="spiderman" class="d-block w-100">
+                        </div>
 
-        <table class="table table-hover">
-            <tr>
-                <th>Name</th>
-                <th>ID</th>
-            </tr>
 
-            {% for hero in object_list %}
-            <tr>
-                <td><a href="hero/{{ hero.pk }}">{{ hero.name }}</a></td>
-                <td>{{ hero.identity }}</td>
-            </tr>
-            {% endfor %}
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
 
-        </table>
+            <div class="card col-lg">
 
-        <p>
-            <a href="hero/add" class="btn btn-success m-5">Add New Hero</a>
-        </p>
+                <table class="table table-hover">
+                    <tr>
+                        <th>Name</th>
+                        <th>ID</th>
+                    </tr>
 
-    </div>
+                    {% for hero in object_list %}
+                    <tr>
+                        <td><a href="hero/{{ hero.pk }}">{{ hero.name }}</a></td>
+                        <td>{{ hero.identity }}</td>
+                    </tr>
+                    {% endfor %}
 
-</div>
+                </table>
 
-{% endblock content %}
+                <p>
+                    <a href="hero/add" class="btn btn-success m-5">Add New Hero</a>
+                </p>
+
+            </div>
+
+        </div>
+
+        {% endblock content %}
