--- a/Superhero/hero/templates/hero/detail.html
+++ b/Superhero/hero/templates/hero/detail.html
@@ -53,7 +53,7 @@ Hero Details
                             <td>{{object.description}}</td>
                         </tr>
                         <tr>
-                            <img src="/static/images/{{object.image}}" alt="" width="200">
+                            <img src="/media/{{object.image.image}}" alt="" width="200">
                         </tr>
                     </table>
 
