--- a/Superhero/hero/templates/theme.html
+++ b/Superhero/hero/templates/theme.html
@@ -54,6 +54,10 @@
             <div class='col'>
                 <a href="/hero" class="btn btn-dark"> Heros</a>
             </div>
+            <div class='col'>
+                <a href="/photo" class="btn btn-dark"> Photos</a>
+            </div>
+
         </div>
         {% if user.is_authenticated %}
         <div class="row">
