--- a/Superhero/hero/templates/hero/list.html
+++ b/Superhero/hero/templates/hero/list.html
@@ -64,7 +64,7 @@ List of Heroes
 
                 <p>
                     <a href="hero/add" class="btn btn-success m-5">Add New Hero</a>
-                    <a href="photos/add" class="btn btn-success m-5">Add New Photos</a>
+                    <a href="photo/add" class="btn btn-success m-5">Add New Photos</a>
                 </p>
 
             </div>
