Used Code builder, then edited and added messages

--- a/Superhero/hero/templates/theme.html
+++ b/Superhero/hero/templates/theme.html
@@ -57,6 +57,9 @@
             <div class='col'>
                 <a href="/photo" class="btn btn-dark"> Photos</a>
             </div>
+            <div class='col'>
+                <a href="/message" class="btn btn-dark"> Messages</a>
+            </div>
 
         </div>
         {% if user.is_authenticated %}
